--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,21 @@
     <properties>
         <java.version>17</java.version>
     </properties>
-    <dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
-
-
-
-    </dependencies>
-
-
+    <scm>
+        <developerConnection>scm:git:https://github.com/Guillaume1060/spring-pet-clinic.git</developerConnection>
+    </scm>
 
 </project>
